--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ dotenv = "0.15.0"
 env_logger = "0.10.0"
 futures = "0"
 log = "0.4.20"
+once_cell = "1.18.0"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
 tokio-util = "0.7.8"
 wifi-ctrl = "0.2.3"
